--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,20 +3,11 @@ name: Python package
 on: [push]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-    strategy:
-      # You can use PyPy versions in python-version.
-      # For example, pypy2.7 and pypy3.9
-      matrix:
-        python-version: ["3.10"]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      # You can test your matrix by printing the current Python version
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
+    coverage:
+        runs-on: ubuntu-latest
+        steps:
+          - name: Get Cover 
+            uses: orgoro/coverage@v3.1
+            with:
+                coverageFile: path/to/coverage.xml
+                token: ${{ secrets.GITHUB_TOKEN }}
