Add mermaid js file named diagram.py

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,7 +1,9 @@
-name: Python package
-
-on: [push]
-
+name: 'coverage'
+on:
+    pull_request:
+        branches:
+            - master
+            - main
 jobs:
     coverage:
         runs-on: ubuntu-latest
