--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,15 +2,29 @@ name: CI
 
 on:
   pull_request:
+  push:
     branches:
       - "main"
 
 jobs:
-    coverage:
-        runs-on: ubuntu-latest
-        steps:
-          - name: Get Cover 
-            uses: orgoro/coverage@v3.1
-            with:
-                coverageFile: path/to/coverage.xml
-                token: ${{ secrets.GITHUB_TOKEN }}
+  test:
+    name: Run tests & display coverage
+    runs-on: ubuntu-latest
+    permissions:
+      # Gives the action the necessary permissions for publishing new
+      # comments in pull requests.
+      pull-requests: write
+      # Gives the action the necessary permissions for pushing data to the
+      # python-coverage-comment-action branch, and for editing existing
+      # comments (to avoid publishing multiple comments in the same PR)
+      contents: write
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install everything, run the tests, produce the .coverage file
+        run: make test # This is the part where you put your own test command
+
+      - name: Coverage comment
+        uses: py-cov-action/python-coverage-comment-action@v3
+        with:
+          GITHUB_TOKEN: ${{ github.token }}
