--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install everything, run the tests, produce the .coverage file
-        run: make test # This is the part where you put your own test command
+        run: pytest
 
       - name: Coverage comment
         uses: py-cov-action/python-coverage-comment-action@v3
