--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,30 +1,36 @@
-name: CI
+# .github/workflows/coverage.yml
+name: Post coverage comment
 
 on:
-  pull_request:
-  push:
-    branches:
-      - "main"
+  workflow_run:
+    workflows: ["CI"]
+    types:
+      - completed
 
 jobs:
   test:
     name: Run tests & display coverage
     runs-on: ubuntu-latest
+    if: github.event.workflow_run.event == 'pull_request' && github.event.workflow_run.conclusion == 'success'
     permissions:
       # Gives the action the necessary permissions for publishing new
       # comments in pull requests.
       pull-requests: write
-      # Gives the action the necessary permissions for pushing data to the
-      # python-coverage-comment-action branch, and for editing existing
+      # Gives the action the necessary permissions for editing existing
       # comments (to avoid publishing multiple comments in the same PR)
       contents: write
+      # Gives the action the necessary permissions for looking up the
+      # workflow that launched this workflow, and download the related
+      # artifact that contains the comment to be published
+      actions: read
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Install everything, run the tests, produce the .coverage file
-        run: pytest
-
-      - name: Coverage comment
+      # DO NOT run actions/checkout here, for security reasons
+      # For details, refer to https://securitylab.github.com/research/github-actions-preventing-pwn-requests/
+      - name: Post comment
         uses: py-cov-action/python-coverage-comment-action@v3
         with:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_PR_RUN_ID: ${{ github.event.workflow_run.id }}
+          # Update those if you changed the default values:
+          # COMMENT_ARTIFACT_NAME: python-coverage-comment-action
+          # COMMENT_FILENAME: python-coverage-comment-action.txt
