Add mermaid js file named diagram.py

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Test with pytest
         run: |
-          pytest
+          pytest test_examples.py
 
       - name: Coverage comment
         uses: py-cov-action/python-coverage-comment-action@v3
