--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,36 +1,15 @@
-# .github/workflows/coverage.yml
-name: Post coverage comment
-
+name: 'coverage'
 on:
-  workflow_run:
-    workflows: ["CI"]
-    types:
-      - completed
-
+    pull_request:
+        branches:
+            - master
+            - main
 jobs:
-  test:
-    name: Run tests & display coverage
-    runs-on: ubuntu-latest
-    if: github.event.workflow_run.event == 'pull_request' && github.event.workflow_run.conclusion == 'success'
-    permissions:
-      # Gives the action the necessary permissions for publishing new
-      # comments in pull requests.
-      pull-requests: write
-      # Gives the action the necessary permissions for editing existing
-      # comments (to avoid publishing multiple comments in the same PR)
-      contents: write
-      # Gives the action the necessary permissions for looking up the
-      # workflow that launched this workflow, and download the related
-      # artifact that contains the comment to be published
-      actions: read
-    steps:
-      # DO NOT run actions/checkout here, for security reasons
-      # For details, refer to https://securitylab.github.com/research/github-actions-preventing-pwn-requests/
-      - name: Post comment
-        uses: py-cov-action/python-coverage-comment-action@v3
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_PR_RUN_ID: ${{ github.event.workflow_run.id }}
-          # Update those if you changed the default values:
-          # COMMENT_ARTIFACT_NAME: python-coverage-comment-action
-          # COMMENT_FILENAME: python-coverage-comment-action.txt
+    coverage:
+        runs-on: ubuntu-latest
+        steps:
+          - name: Get Cover 
+            uses: orgoro/coverage@v3.1
+            with:
+                coverageFile: junit/test-results.xml
+                token: ${{ secrets.GITHUB_TOKEN }}
