Final update to remove API key. Additions made to github actions and the requirements.txt as a result of the actions updates.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pip install pgeocode
-pip install requests
-pip install jsonpath_ng
-pip install flask
-pip install setuptools
-pip install wheel
+pgeocode
+requests
+jsonpath_ng
+flask
+setuptools
+wheel
