Add mermaid js file named diagram.py

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,9 +1,7 @@
-name: 'build_coverage'
-on:
-    pull_request:
-        branches:
-            - master
-            - main
+name: Python package
+
+on: [push]
+
 jobs:
   build:
     steps:
