--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,9 +1,7 @@
-name: 'coverage'
-on:
-    pull_request:
-        branches:
-            - master
-            - main
+name: coverage
+
+on: [push]
+
 jobs:
     coverage:
         runs-on: ubuntu-latest
