Final update add code to make action for reporting run after tests

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,7 +1,11 @@
 name: coverage
 
-on: [push]
-
+on:
+  workflow_run:
+    workflows: ["CI"]
+    types:
+      - completed
+      
 jobs:
     coverage:
         runs-on: ubuntu-latest
