--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,8 +38,11 @@ jobs:
           pip install pytest pytest-cov
           pytest test_examples.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
 
-      - name: Post comment
-        uses: py-cov-action/python-coverage-comment-action@v3
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
         with:
-          COMMENT_ARTIFACT_NAME: python-coverage-comment-action
-          COMMENT_FILENAME: junit/test-results.xml
+          files: |
+            junit/**/*.xml
+            junit/**/*.trx
+            junit/**/*.json
