--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,3 +48,12 @@ jobs:
             junit/**/*.xml
             junit/**/*.trx
             junit/**/*.json
+      
+      - name: Store Pull Request comment to be posted
+        uses: actions/upload-artifact@v3
+        if: steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
+        with:
+          # If you use a different name, update COMMENT_ARTIFACT_NAME accordingly
+          name: python-coverage-comment-action
+          # If you use a different name, update COMMENT_FILENAME accordingly
+          path: python-coverage-comment-action.txt
