--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,12 +48,12 @@ jobs:
             junit/**/*.xml
             junit/**/*.trx
             junit/**/*.json
-
-      - name: Post comment
-        uses: py-cov-action/python-coverage-comment-action@v3
+      
+      - name: Store Pull Request comment to be posted
+        uses: actions/upload-artifact@v3
+        if: steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_PR_RUN_ID: ${{ github.event.workflow_run.id }}
-          # Update those if you changed the default values:
-          # COMMENT_ARTIFACT_NAME: python-coverage-comment-action
-          # COMMENT_FILENAME: python-coverage-comment-action.txt
+          # If you use a different name, update COMMENT_ARTIFACT_NAME accordingly
+          name: python-coverage-comment-action
+          # If you use a different name, update COMMENT_FILENAME accordingly
+          path: python-coverage-comment-action.txt
