--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,7 +38,7 @@ jobs:
           API_KEY: ${{ secrets.API_KEY }}
         run: |
           pip install pytest pytest-cov
-          coverage run -m pytest test_examples.py && coverage report -m 
+          coverage run -m pytest test_examples.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html && coverage report -m 
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
@@ -48,6 +48,7 @@ jobs:
             junit/**/*.xml
             junit/**/*.trx
             junit/**/*.json
+      
       
       - name: Store Pull Request comment to be posted
         uses: actions/upload-artifact@v3
