--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -50,6 +50,8 @@ jobs:
       
       - name: Coverage comment
         id: coverage_comment
+        env:
+          coverage: COVERAGE_HOME=junit/
         uses: py-cov-action/python-coverage-comment-action@v3
         with:
           GITHUB_TOKEN: ${{ github.token }}
