--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           pip install pytest pytest-cov
           coverage run -m pytest test_examples.py --doctest-modules --junitxml=junit/test-results.xml && coverage xml -i 
+          make weekend_api.py
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
@@ -47,11 +48,24 @@ jobs:
             junit/**/*.xml
             junit/**/*.trx
             junit/**/*.json
+            
+      - name: Coverage comment
+        id: coverage_comment
+        uses: py-cov-action/python-coverage-comment-action@v3
+        with:
+          GITHUB_TOKEN: ${{ github.token }}
+
+      - name: Store Pull Request comment to be posted
+        uses: actions/upload-artifact@v3
+        if: steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
+        with:
+          # If you use a different name, update COMMENT_ARTIFACT_NAME accordingly
+          name: python-coverage-comment-action
+          # If you use a different name, update COMMENT_FILENAME accordingly
+          path: python-coverage-comment-action.txt
       
       - name: Coverage comment
         id: coverage_comment
-        env:
-          coverage: COVERAGE_HOME=junit/
         uses: py-cov-action/python-coverage-comment-action@v3
         with:
           GITHUB_TOKEN: ${{ github.token }}
