--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,8 +37,8 @@ jobs:
           API_KEY: ${{ secrets.API_KEY }}
         run: |
           pip install pytest pytest-cov
-          coverage run -m pytest test_examples.py --doctest-modules --junitxml=junit/test-results.xml && coverage xml -i 
-          python test_examples.py bdist_wheel --universal
+          coverage run -m pytest test_examples.py --doctest-modules --junitxml=junit/test-results.xml && coverage report -m
+          python weekend_api.py bdist_wheel --universal
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
