--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
-          coverage run --source=weather_api.py -m pytest test_examples.py --doctest-modules --junitxml=junit/test-results.xml && coverage report -m
+          coverage run --source=weather_api.py test_examples.py && coverage report -m
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
