--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,8 +38,8 @@ jobs:
         run: |
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
-          pytest test/test_examples.py --doctest-modules --junitxml=junit/test-results.xml
-          coverage run -m test/test_examples.py && coverage report -m
+          pytest test_examples.py --doctest-modules --junitxml=junit/test-results.xml
+          coverage run -m test_examples.py && coverage report -m
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
