--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,7 @@ jobs:
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
           pytest test_examples.py --doctest-modules --junitxml=junit/test-results.xml --cov
-          coverage report -m
+          coverage xml -i
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
