--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,8 +38,9 @@ jobs:
         run: |
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
-          pytest test_examples.py --doctest-modules --junitxml=junit/test-results.xml --cov
-          coverage xml -i
+          pytest --doctest-modules --junitxml=junit/test-results.xml 
+          pytest --cov=myproj tests/
+          coverage report -m
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
