--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,7 @@ jobs:
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
           pytest --doctest-modules --junitxml=junit/test-results.xml 
-          pytest --cov=myproj tests/
+          pytest --cov=weekend_api tests/
           coverage report -m
 
       - name: Publish Test Results
