--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,7 +40,7 @@ jobs:
           python setup.py bdist_wheel --universal
           pytest --doctest-modules --junitxml=junit/test-results.xml 
           pytest --cov=weekend_api tests/
-          coverage report -i -m
+          coverage report -m
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
@@ -56,6 +56,7 @@ jobs:
         uses: py-cov-action/python-coverage-comment-action@v3
         with:
           GITHUB_TOKEN: ${{ github.token }}
+          junitxml-path: junit/test-results.xml 
 
       - name: Store Pull Request comment to be posted
         uses: actions/upload-artifact@v3
