--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,6 @@ jobs:
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
           pytest --doctest-modules --junitxml=junit/test-results.xml 
-          pytest --cov=weekend_api tests/
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
@@ -49,7 +48,10 @@ jobs:
             junit/**/*.xml
             junit/**/*.trx
             junit/**/*.json
-            
+      
+      - name: Install everything, run the tests, produce the .coverage file
+        run: make tests
+
       - name: Coverage comment
         id: coverage_comment
         uses: py-cov-action/python-coverage-comment-action@v3
