--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,7 +40,7 @@ jobs:
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
           pytest --doctest-modules --junitxml=junit/test-results.xml
-          coverage results tests/test_examples.py
+          coverage report tests/test_examples.py
           
 
       - name: Publish Test Results
