--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,8 +40,7 @@ jobs:
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
           pytest --doctest-modules --junitxml=junit/test-results.xml
-          pytest --cov=weekend_api tests/
-          coverage report -m --rcfile=setup.cfg
+          coverage run tests/ -m --rcfile=setup.cfg
           
 
       - name: Publish Test Results
