--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,11 +36,11 @@ jobs:
         env: 
           API_KEY: ${{ secrets.API_KEY }}
           COVERAGE_FILE: .coverage
-          PYTEST_ADD_OPTS: --cov-append
+          PYTEST_ADD_OPTS: 
         run: |
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
-          pytest --doctest-modules --junitxml=junit/test-results.xml
+          pytest --doctest-modules --junitxml=junit/test-results.xml --cov-append
           coverage run tests/test_examples.py --rcfile=setup.cfg
           
 
