--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,7 +40,7 @@ jobs:
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
           pytest --doctest-modules --junitxml=junit/test-results.xml --cov-append
-          coverage tests/test_examples.py --source=weekend_api.py --rcfile=setup.cfg
+          coverage run tests/test_examples.py --rcfile=setup.cfg
           
 
       - name: Publish Test Results
