--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,8 +39,8 @@ jobs:
         run: |
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
-          coverage run tests/test_examples.py --rcfile=setup.cfg -m pytest --doctest-modules --junitxml=junit/test-results.xml --cov-append
-          coverage xml -i
+          coverage run  -m pytest
+          coverage report -m
           
           
 
