--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,8 +39,8 @@ jobs:
         run: |
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
-          coverage run  -m pytest
-          coverage report -m
+          coverage run --rcfile=setup.cfg -m pytest
+          coverage report -m 
           
           
 
