--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -54,4 +54,4 @@ jobs:
           # If you use a different name, update COMMENT_ARTIFACT_NAME accordingly
           name: python-coverage-comment-action
           # If you use a different name, update COMMENT_FILENAME accordingly
-          path: python-coverage-comment-action.txt
+          path: .coverage
