--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           pip install pytest pytest-cov
           python setup.py bdist_wheel --universal
-          coverage run -m pytest
+          coverage run --rcfile=setup.cfg -m pytest
           coverage report -m 
 
       - name: Coverage comment
@@ -53,6 +53,6 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           # If you use a different name, update COMMENT_ARTIFACT_NAME accordingly
-          name: python-coverage-comment-action
+          COMMENT_ARTIFACT_NAME: python-coverage-comment-action
           # If you use a different name, update COMMENT_FILENAME accordingly
-          path: ./python-coverage-comment-action.txt
+          COMMENT_FILENAME: ./python-coverage-comment-action.txt
