--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -53,6 +53,6 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           # If you use a different name, update COMMENT_ARTIFACT_NAME accordingly
-          COMMENT_ARTIFACT_NAME: python-coverage-comment-action
+          name: python-coverage-comment-action
           # If you use a different name, update COMMENT_FILENAME accordingly
-          COMMENT_FILENAME: ./python-coverage-comment-action.txt
+          path: src/python-coverage-comment-action.txt
