--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,13 +47,11 @@ jobs:
         uses: py-cov-action/python-coverage-comment-action@v3
         with:
           GITHUB_TOKEN: ${{ github.token }}
-          GITHUB_PR_RUN_ID: ${{ github.event.workflow_run.id }}
+          MERGE_COVERAGE_FILES: true
 
-      - name: Upload Coverage
-        id: getfilename
-        run: echo "::set-output name=file::$(ls *action.txt)"
-      - uses: actions/upload-artifact@v1
+      - name: Store Pull Request comment to be posted
+        uses: actions/upload-artifact@v3
+        if: steps.coverage_comment.outputs.COMMENT_FILE_WRITTEN == 'true'
         with:
-          # If you use a different name, update COMMENT_ARTIFACT_NAME accordingly
           name: python-coverage-comment-action
-          path: ${{ steps.getfilename.outputs.file }}
+          path: python-coverage-comment-action.txt
