--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ addopts =
     --cov=codebase.code -vv --strict-markers -rfE
 
 testpaths =
-    tests/test_example.py
+    tests/test_examples.py
 
 [coverage:run]
 relative_files = true
