--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -53,7 +53,7 @@ jobs:
           COVERAGE_COMMENT_E2E_ACTION_REF: ${{ github.sha }}
           COVERAGE_COMMENT_E2E_REPO_SUFFIX: ${{ github.event.number }}
           COVERAGE_COMMENT_E2E_PR_AUTHOR: ${{ github.event.pull_request.user.login }}
-        run: poetry run python tests/test_examples.py
+        run: poetry run pytest --cov=weekend_api --cov-report html --html=report.html
 
       - name: Coverage comment
         id: coverage_comment
@@ -68,6 +68,6 @@ jobs:
         if: steps.coverage_comment.outputs == 'true'
         with:
           name: python-coverage-comment-action
-          path: python-coverage-comment-action.txt
+          path: ../report.html
 
           
